--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@google-cloud/local-auth": "^3.0.1",
     "@modelcontextprotocol/sdk": "^1.12.1",
     "esbuild": "^0.25.0",
+    "express": "^5.1.0",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "open": "^7.4.2",
