--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,19 @@ GOOGLE_OAUTH_CREDENTIALS=./gcp-oauth.keys.json
 # SEND_UPDATES=none
 # AUTO_CLEANUP=true
 
+## OPTIONAL: Multi-Account Testing (requires 2 authenticated Google accounts)
+# Authenticate accounts with:
+#   node scripts/account-manager.js auth test-primary
+#   node scripts/account-manager.js auth test-secondary
+#
+# TEST_PRIMARY_ACCOUNT=test-primary
+# TEST_PRIMARY_CALENDAR=your-primary-test-email@gmail.com
+# TEST_SECONDARY_ACCOUNT=test-secondary
+# TEST_SECONDARY_CALENDAR=your-secondary-test-email@gmail.com
+# TEST_SHARED_CALENDAR=calendar-id-shared-between-accounts@group.calendar.google.com
+
 ## OPTIONAL: Anthropic API config (used only for integration testing)
-# ANTHROPIC_MODEL=claude-3-5-haiku-20241022
+# ANTHROPIC_MODEL=claude-haiku-4-5-20251001
 # CLAUDE_API_KEY={your_api_key}
 
 # OPTIONAL: Open AI API config (used only for integration testing)
