--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@
 TRANSPORT=stdio  # Recommended for Claude Desktop integration
 
 # HTTP settings (when TRANSPORT=http)
+# WARNING: HTTP mode is for local development only - no authentication layer
 PORT=3000
-HOST=0.0.0.0
+HOST=127.0.0.1  # Use 127.0.0.1 for security; 0.0.0.0 exposes to network (not recommended)
 
 # Development
 DEBUG=false
