--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        # Don't cache npm - this job builds two different lockfiles (PR and base branch)
+        cache: 'npm'
 
     - name: Install dependencies (PR branch)
       run: npm ci
