fix: add gaxios as direct dependency

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
     "@modelcontextprotocol/sdk": "^1.12.1",
+    "gaxios": "^6.7.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "open": "^7.4.2",
