--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,10 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
-      
+
+    - name: Check for undeclared dependencies
+      run: npm run check:imports
+
     - name: Run unit tests with coverage
       run: |
         echo "🧪 Running unit tests with coverage..."
