--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/index.js",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js && npm run build:ui",
+    "build:ui": "vite build --config vite.config.ui.ts",
     "auth": "node build/auth-server.js",
     "account": "node scripts/account-manager.js",
     "dev": "node scripts/dev.js",
