feat: add multi-day context service and enhance day view UI
Add MultiDayContextService for fetching events across date ranges with
color palette support. Enhance day view with preview mode, event colors,
calendar indicators, and improved styling. Add unit test skill config.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "node build/index.js",
     "build": "node scripts/build.js && npm run build:ui",
     "build:ui": "vite build --config vite.config.ui.ts",
+    "preview:ui": "vite --config vite.config.ui.ts src/ui/day-view/preview.html",
     "auth": "node build/auth-server.js",
     "account": "node scripts/account-manager.js",
     "dev": "node scripts/dev.js",
