feat: add Railway deployment with bearer token authentication
This commit adds production-ready deployment support for Railway with
secure bearer token authentication for remote MCP access.

Changes:

Security Enhancements (src/transports/http.ts):
- Add bearer token validation middleware using MCP_BEARER_TOKEN env var
- Replace isLocalhostOrigin() with isAllowedOrigin() supporting custom domains
- Update CORS headers to include Authorization and use ALLOWED_ORIGIN env var
- Update OAuth redirects to use OAUTH_REDIRECT_BASE_URL env var for production
- Add bearer token validation before MCP transport requests

Deployment Configuration:
- Update Dockerfile CMD to run in HTTP mode on 0.0.0.0 for cloud deployment
- Enhance .dockerignore to exclude credentials, tests, and dev files
- Add railway.toml with health check and restart policy configuration
- Add DEPLOYMENT.md with comprehensive deployment guide
- Update .env.example with Railway-specific environment variables

Environment Variables Added:
- MCP_BEARER_TOKEN: Authentication token for MCP requests
- ALLOWED_ORIGIN: Domain for CORS and origin validation
- OAUTH_REDIRECT_BASE_URL: Production URL for OAuth callbacks

Authentication Flow:
- OAuth endpoints (/oauth2callback, /accounts, /api/accounts/*) remain open
- Health endpoint (/health) remains open for Railway health checks
- All MCP requests require valid Bearer token in Authorization header
- Development mode (no MCP_BEARER_TOKEN set) allows all requests

This enables secure personal remote access while maintaining backward
compatibility with local development workflows.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,72 @@
+# Credentials and tokens
 gcp-oauth.keys.json
 .gcp-saved-tokens.json
+tokens.json
+*.keys.json
+
+# Node modules (will be installed in container)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output (will be generated during build)
+build/
+dist/
+*.tsbuildinfo
+
+# Testing
+coverage/
+.nyc_output/
+*.test.ts
+*.spec.ts
+src/tests/
+test/
+tests/
+
+# Development files
+.env
+.env.*
+!.env.example
+*.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Documentation (not needed in container)
+*.md
+!README.md
+docs/
+
+# Git
+.git/
+.gitignore
+.gitattributes
+
+# CI/CD
+.github/
+.gitlab-ci.yml
+.travis.yml
+
+# Worktrees
+.worktrees/
+
+# Local development
+.claude/
+.cursor/
+
+# Deployment configs (already in image)
+Dockerfile
+.dockerignore
+docker-compose*.yml
+
+# Misc
+*.orig
+*.rej
+*.swp
