--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,29 @@
 # Google Calendar MCP Server Configuration
+
+## PRODUCTION DEPLOYMENT (Railway/Cloud) ##
+# Required for remote HTTP deployment with authentication
+
+# Bearer token for MCP authentication (generate with: openssl rand -base64 32)
+MCP_BEARER_TOKEN=your-secret-bearer-token-here
+
+# Allowed origin for CORS (your domain, e.g., https://cal.example.com)
+ALLOWED_ORIGIN=https://your-domain.com
+
+# OAuth redirect base URL (typically same as ALLOWED_ORIGIN)
+OAUTH_REDIRECT_BASE_URL=https://your-domain.com
+
+# Google OAuth credentials (base64 encoded for Railway, or file path for local)
+# For Railway: base64 -i gcp-oauth.keys.json
+GOOGLE_OAUTH_CREDENTIALS=./gcp-oauth.keys.json
+
+## LOCAL DEVELOPMENT ##
+
 # Transport mode
 TRANSPORT=stdio  # Recommended for Claude Desktop integration
 
 # HTTP settings (when TRANSPORT=http)
-# WARNING: HTTP mode is for local development only - no authentication layer
 PORT=3000
-HOST=127.0.0.1  # Use 127.0.0.1 for security; 0.0.0.0 exposes to network (not recommended)
-
-# OAuth credentials path (required)
-GOOGLE_OAUTH_CREDENTIALS=./gcp-oauth.keys.json
+HOST=127.0.0.1  # Use 127.0.0.1 for local dev; 0.0.0.0 for Railway/Docker
 
 ## Optional: Custom token storage location
 # GOOGLE_CALENDAR_MCP_TOKEN_PATH=/custom/path/to/tokens
