Improve test structure, CI pipeline, and coverage thresholds (#172)
* Improve test structure, CI pipeline, and coverage thresholds

- Extract shared MCP client helper to reduce integration test boilerplate
- Add unit tests for CLI entry, GoogleCalendarMcpServer, and transport handlers
- Add type-check, build, and smoke test steps to CI
- Add granular test:integration:* npm scripts
- Add coverage thresholds (global + per-folder) to vitest config
- Update testing docs to reflect new scripts

* ci: remove smoke test step (covered by unit tests)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Check for undeclared dependencies
       run: npm run check:imports
 
+    - name: Type-check
+      run: npm run lint
+
+    - name: Build
+      run: npm run build
+
     - name: Run unit tests with coverage
       run: |
         echo "🧪 Running unit tests with coverage..."
@@ -249,4 +255,3 @@ jobs:
         issue-number: ${{ github.event.pull_request.number }}
         body-path: /tmp/comparison.md
         edit-mode: replace
-
